; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_asn1_time_test.c_test_table_compare.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_asn1_time_test.c_test_table_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.compare_testdata = type { i32, i32, i32 }

@tbl_compare_testdata = common dso_local global %struct.compare_testdata* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @test_table_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @test_table_compare(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.compare_testdata*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load %struct.compare_testdata*, %struct.compare_testdata** @tbl_compare_testdata, align 8
  %5 = load i32, i32* %2, align 4
  %6 = sext i32 %5 to i64
  %7 = getelementptr inbounds %struct.compare_testdata, %struct.compare_testdata* %4, i64 %6
  store %struct.compare_testdata* %7, %struct.compare_testdata** %3, align 8
  %8 = load %struct.compare_testdata*, %struct.compare_testdata** %3, align 8
  %9 = getelementptr inbounds %struct.compare_testdata, %struct.compare_testdata* %8, i32 0, i32 2
  %10 = load %struct.compare_testdata*, %struct.compare_testdata** %3, align 8
  %11 = getelementptr inbounds %struct.compare_testdata, %struct.compare_testdata* %10, i32 0, i32 1
  %12 = call i32 @ASN1_TIME_compare(i32* %9, i32* %11)
  %13 = load %struct.compare_testdata*, %struct.compare_testdata** %3, align 8
  %14 = getelementptr inbounds %struct.compare_testdata, %struct.compare_testdata* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @TEST_int_eq(i32 %12, i32 %15)
  ret i32 %16
}

declare dso_local i32 @TEST_int_eq(i32, i32) #1

declare dso_local i32 @ASN1_TIME_compare(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
